# Copyright 2018 POA Networks Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# and limitations under the License.

[package]
name = "classygroup"
version = "0.0.3"
authors = ["Stichting Organism"]
description = "The Classy Group"
keywords = ["classgroup"]
repository = "https://github.com/stichtingorganism/classygroup"
license = "Apache-2.0"
edition = "2018"


[dependencies]
gmp-mpfr-sys = "1.1.11"
rug = "1.3.0"
bacteria = "0.0.8"
bit-vec = "0.5"
anyhow = "1.0"
lazy_static = "1.2.0"
mohan = "0.0.*"

[dev-dependencies]
criterion = ">=0.2"


[[bench]]
name = "classgroup-bench"
harness = false
path = "bench/bench.rs"
