[package]
name = "classygroup"
version = "0.0.5"
authors = ["Stichting Organism"]
description = "The Classy Group"
keywords = ["classgroup"]
repository = "https://github.com/stichtingorganism/classygroup"
license = "Apache-2.0"
edition = "2018"


[dependencies]
gmp-mpfr-sys = "1.1.11"
rug = "1.3.0"
bacteria = "0.0.8"
bit-vec = "0.5"
anyhow = "1.0"
lazy_static = "1.2.0"
mohan = "0.0.*"

[dev-dependencies]
criterion = ">=0.2"
rand = "0.*"

[[bench]]
name = "class"
path = "bench/class.rs"
harness = false

[[bench]]
name = "hashes"
path = "bench/hash/hashes.rs"
harness = false

[[bench]]
name = "uint"
path = "bench/uint.rs"
harness = false